--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -5,6 +5,7 @@ body {
     text-align: center;
     padding: 0 25px;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 1200px;
 }
 
 aside {
